--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-fbsdk": "^0.5.0",
     "react-native-i18n": "^1.0.0",
     "react-native-image-picker": "^0.26.3",
+    "react-native-maps": "^0.13.1",
     "react-native-material-design-searchbar": "^1.1.2",
     "react-native-navbar": "^1.7.1",
     "react-native-router-flux": "3.35.0",
