--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ android: #1.3
   components:
   - build-tools-23.0.1
   - android-23
+  - build-tools-25.0.1
+  - android-25
   - extra-android-m2repository
   - extra-google-google_play_services
   - extra-google-m2repository
