--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install: #1.2
 - yarn install
 android: #1.3
   components:
+  - tools
   - build-tools-23.0.1
   - android-23
   - build-tools-25.0.1
